--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-# Copy this file to .env.local and set your worker URL
-VITE_CHATBOT_WORKER_URL=https://klimata-chatbot-worker.daivanfebrijuansetiya.workers.dev
+# This file has been scheduled for removal from the repository.
+# To remove it from the remote, run the following commands locally:
+# git rm .env.example
+# git commit -m "chore: remove .env.example from repo"
+# git push origin <branch>
 
-# Restart the frontend dev server after changing env files.
+# If you want to keep an example env file in the repo for documentation,
+# consider renaming it to `.env.example.sample` and removing any sensitive values.
